# all_in

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
about/: index.html
all_in/: __init__.py
all_in/io/: file_utils.py
all_in/io_utils/: file_utils.py
all_in/plotting/: plot_utils.py
all_in/utils/: utilities.py
allinpy/: __init__.py
allinpy/io_utils/: file_utils.py
allinpy/plotting/: plot_utils.py
allinpy/utils/: utilities.py
docs/: about.md  index.md  io_utils.md  plotting.md  reference.md  utils.md
io_utils/: index.html
plotting/: index.html
reference/: index.html
search/: search_index.json
tests/: test_file_utils.py  test_utilities.py
utils/: index.html
