[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "all_in"
version = "0.1.0"
description = "Modular utilities for scientific computing and plotting."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE"}

authors = [
  { name = "Rasmus Bruckner", email = "rasmusb@zedat.fu-berlin.de" }
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "tqdm"
]

[project.urls]
"Source" = "https://github.com/rasmusbruckner/all_in"
